# msdk-py

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
src/msdk_py/: __init__.py  __main__.py  cli.py
src/msdk_py/commands/: __init__.py  base.py
src/msdk_py/commands/clean/: __init__.py
src/msdk_py/commands/clean_periph/: __init__.py
src/msdk_py/commands/flash/: __init__.py
src/msdk_py/commands/init/: __init__.py  defaults.py  generate.py  validation.py
src/msdk_py/commands/run/: __init__.py
src/msdk_py/common/: build.py  display.py  error.py  toml_config.py  types.py  utils.py  validation.py
